Sidebar minor fixes, still collapsed hover issue

--- a/assets/scss/unifty/layout/_sidebar.scss
+++ b/assets/scss/unifty/layout/_sidebar.scss
@@ -26,6 +26,7 @@
     flex-direction: column;
     padding-bottom: 6rem;
     overflow: hidden;
+    overflow-y: auto;
 
     @include respond(big-desktop) {
       padding-bottom: 0.7rem;
@@ -216,13 +217,11 @@
       }
     }
 
-    &.active{
+    &.active {
       i svg path:first-child {
         fill: var(--bg-secondary) !important;
       }
     }
-
-    
   }
 
   li.collapsible {
@@ -325,11 +324,11 @@
   }
 }
 
-.bs-popover-right{
+.bs-popover-right {
   border-radius: 0.8rem;
 
-  .arrow{
-    display:none;
+  .arrow {
+    display: none;
   }
 }
 .popover-body {
@@ -357,7 +356,7 @@
       text-align: left;
       color: #6c757d;
 
-      margin:0;
+      margin: 0;
     }
 
     i {
@@ -366,8 +365,8 @@
       margin-right: 1.3rem;
     }
 
-    &.active{
-      i{
+    &.active {
+      i {
         color: var(--primary-color);
       }
     }
